@@ -19,6 +19,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.InetAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -444,7 +446,7 @@ public class TirameElPingController implements Initializable {
                 miIpList.add("Canonical Host Name: " + InetAddress.getLocalHost().getCanonicalHostName());
 
 
-                    URL url_name = new URL("http://myexternalip.com/raw");
+                URL url_name = new URI("http://myexternalip.com/raw").toURL();
                     BufferedReader sc =
                             new BufferedReader(new InputStreamReader(url_name.openStream()));
                     // reads system IPAddress
@@ -455,7 +457,7 @@ public class TirameElPingController implements Initializable {
                     txtIpInfo.setText( txtIpInfo.getText() + " \n "+ data);
                 }
             }
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
 
